# BaseSystem

./: .gitignore  .gitmodules  .travis.yml  LICENSE.txt  LICENSE_CLOC.txt  LICENSE_DOXYGEN.txt  Makefile  README.md  TouchDisplay_Spec.docx  build.gradle  buildAll.bat  buildAll.sh  cloc.bat  cloc.sh  create_staging_area.bat  installDependencies.sh  pom.xml
APF/: Doxyfile  build.gradle  pom.xml
APF/gradle/wrapper/: gradle-wrapper.properties
APFCreator/: build.gradle  pom.xml
AppManager/: build.gradle  pom.xml  unknown_icon.psd
AppManager/gradle/wrapper/: gradle-wrapper.properties
AppSDK/: Doxyfile  build.gradle  pom.xml
AppSDK/gradle/wrapper/: gradle-wrapper.properties
BaseSystem/: Doxyfile  build.gradle  pom.xml
BaseSystem/gradle/wrapper/: gradle-wrapper.properties
Documentation/APF Format/: index.html
Documentation/APF Format/APF/: hts-log.txt  index.html
Documentation/APFCreator/: index.html
Documentation/APFCreator/APFCreator/: hts-log.txt
Documentation/AppManager/: index.html
Documentation/AppManager/AppManager/: hts-log.txt
Documentation/DevelopmentEnvironment/: index.html
Documentation/DevelopmentEnvironment/DevelopmentEnvironment/: hts-log.txt  index.html
Documentation/Protocols/Protocols/: hts-log.txt  index.html
Documents/APF Format/APF/: hts-log.txt
Documents/APFCreator/APFCreator/: hts-log.txt  index.html
Documents/AppManager/AppManager/: hts-log.txt  index.html
Documents/DevelopmentEnvironment/DevelopmentEnvironment/: hts-log.txt
Documents/Gui/: index.html
Documents/Gui/Gui/: hts-log.txt  index.html
Documents/LogViewer/: index.html
Documents/LogViewer/LogViewer/: hts-log.txt  index.html
Documents/Protocols/: index.html
Documents/Protocols/Protocols/: hts-log.txt
FmodNative/: CMakeLists.txt  FmodNative.kdev4
FmodNative/.kdev4/: FmodNative.kdev4
FmodNative/fmod/linux/lib/armhf/: libfmod.so.9.3
FmodNative/fmod/linux/lib/x86/: libfmodL.so.9.3
FmodNative/fmod/linux/lib/x86_64/: libfmod.so.9.3  libfmodL.so.9.3
FmodNative/fmod/rasp/lib/arm/: libfmod.so.9.3  libfmodL.so.9.3
FmodNative/fmod/rasp/lib/armhf/: libfmodL.so.9.3
FmodNative/fmod/rasp/lib/x86/: libfmod.so.9.3
FmodNative/src/: Boolean.cpp  Boolean.h  Float.h  FmodChannelControl.cpp  FmodChannelOrder.cpp  FmodChannelOrder.h  FmodDSPConnectionType.cpp  FmodDSPType.cpp  FmodOutputType.cpp  FmodOutputType.h  FmodResult.cpp  FmodResult.h  FmodSoundFormat.cpp  FmodSoundFormat.h  FmodSoundType.cpp  FmodSoundType.h  FmodSpeakerMode.cpp  FmodSpeakerMode.h  Integer.cpp  Integer.h  SystemVolume.h  SystemVolumeFallback.cpp  SystemVolumeLinux.cpp  SystemVolumeWindows.cpp  Wrapper.cpp  Wrapper.h  de_awesome_smarthome_td_sound_FmodChannel.cpp  de_awesome_smarthome_td_sound_FmodChannel.h  de_awesome_smarthome_td_sound_FmodCreateSoundExInfo.cpp  de_awesome_smarthome_td_sound_FmodCreateSoundExInfo.h  de_awesome_smarthome_td_sound_FmodSound.cpp  de_awesome_smarthome_td_sound_FmodSound.h  de_awesome_smarthome_td_sound_FmodSystem.cpp  de_awesome_smarthome_td_sound_FmodSystem.h  de_silveryard_basesystem_sound_FmodChannel.cpp  de_silveryard_basesystem_sound_FmodChannel.h  de_silveryard_basesystem_sound_FmodChannelGroup.cpp  de_silveryard_basesystem_sound_FmodChannelGroup.h  de_silveryard_basesystem_sound_FmodCreateSoundExInfo.cpp  de_silveryard_basesystem_sound_FmodCreateSoundExInfo.h  (+11 more)
GradlePlugin/: build.gradle
GradlePlugin/gradle/wrapper/: gradle-wrapper.properties
LibBS/: CMakeLists.txt
LibBS/include/: bs_def.h  bs_util.h
LibBS/include/jni/: bs_jni.h
LibBS/src/: def.cpp  jni_float.cpp  jni_int.cpp
LibDisplay/: CMakeLists.txt
LibDisplay/include/: de_silveryard_basesystem_libdisplayjava_Display.h  de_silveryard_basesystem_libdisplaysysjava_DisplaySys.h  display.h  display_def.h  display_os.h
LibDisplay/src/: de_silveryard_basesystem_libdisplayjava_Display.cpp  de_silveryard_basesystem_libdisplaysysjava_DisplaySys.cpp  display_base.cpp  display_dispmanx.cpp  display_fallback.cpp  display_windows.cpp
LibDisplayJava/: build.gradle  settings.gradle
LibDisplaySysJava/: build.gradle  settings.gradle
Libraries/System/Native/DisplayManager/: CMakeLists.txt
Libraries/System/Native/SDLNative/: CMakeLists.txt  build.gradle
Libraries/System/Native/SDLNative/src/: shader.h
Libraries/System/Native/SDLNative/src/jni/: de_silveryard_basesystem_gui_SDLTexture.h  de_silveryard_basesystem_gui_SDLWindow.cpp
Libraries/System/Native/lib-bs-sys-system/: CMakeLists.txt  build.gradle
Libraries/System/Native/lib-bs-sys-system/include/bs/system/: logger.h
Libraries/System/Native/lib-bs-sys-system/include_private/: de_silveryard_basesystem_logging_LogManager.h
Libraries/System/Native/lib-bs-sys-system/src/: logger.cpp
Libraries/System/Native/lib-bs-sys-system/src/jni/: de_silveryard_basesystem_logging_LogManager.cpp
LogViewer/: icon.psd  pom.xml
SDLNative/: CMakeLists.txt  build.gradle
SDLNative/cmake/: FindSDL2.cmake
SDLNative/src/: SDLNative.h  font.cpp  font.h  label.cpp  label.h  main.cpp  shader.cpp  texture.cpp  texture.h  window.cpp  window.h
SDLNative/src/jni/: de_awesome_smarthome_td_gui_SDLFont.cpp  de_awesome_smarthome_td_gui_SDLFont.h  de_awesome_smarthome_td_gui_SDLLabel.cpp  de_awesome_smarthome_td_gui_SDLLabel.h  de_awesome_smarthome_td_gui_SDLTexture.cpp  de_awesome_smarthome_td_gui_SDLTexture.h  de_awesome_smarthome_td_gui_SDLWindow.cpp  de_awesome_smarthome_td_gui_SDLWindow.h  de_silveryard_basesystem_gui_SDLFont.cpp  de_silveryard_basesystem_gui_SDLFont.h  de_silveryard_basesystem_gui_SDLLabel.cpp  de_silveryard_basesystem_gui_SDLLabel.h  de_silveryard_basesystem_gui_SDLTexture.cpp  de_silveryard_basesystem_gui_SDLWindow.cpp  de_silveryard_basesystem_gui_SDLWindow.h
Shared/Include/: bs_def.h
Tools/APFCreator/: build.gradle
Tools/AppManager/: icon.psd
Tools/LogViewer/: build.gradle
TouchDisplay/: pom.xml
Transport/: Doxyfile  build.gradle  pom.xml
VisualVMPlugin/: build.xml  manifest.mf
VisualVMPlugin/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
(+1852 files in other folders)
